--- a/css/lock-screen.css
+++ b/css/lock-screen.css
@@ -14,6 +14,9 @@ body {
     background-color: #ffffff;
     box-sizing: border-box;
 }
+*{
+    box-sizing: border-box;
+}
 
 .lock-screen {
     text-align: center;
@@ -43,7 +46,7 @@ body {
 }
 
 .lock-screen button {
-    background-color: #4CAF50;
+    background-color: #1a4adb;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -53,18 +56,10 @@ body {
 }
 
 .lock-screen button:hover {
-    background-color: #45a049;
+    background-color: #002175;
 }
 
 .lock-screen .error {
     color: red;
     margin-top: 10px;
-}
-
-.lock-screen .main-content {
-    text-align: center;
-    background-color: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
