--- a/css/main-container.css
+++ b/css/main-container.css
@@ -5,7 +5,9 @@
     justify-content: space-around;
     align-items: center;
     width: 100%;
-    height: 100vh;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 20px;
 }
 
 
@@ -89,7 +91,7 @@
     padding: 1rem;
     background-color: #fff;
     box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
-    max-width: 320px;
+    width: 100%;
     border-radius: 20px;
   }
   
