--- a/css/main-container.css
+++ b/css/main-container.css
@@ -14,9 +14,10 @@
   display: flex;
   position: relative;
   background-color: #fff;
-  box-shadow: 0 0 1px 0 rgba(24, 94, 224, 0.15), 0 6px 12px 0 rgba(24, 94, 224, 0.15);
+  box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
   padding: 0.75rem;
   border-radius: 99px;
+  width: 100%;
 }
 
 .container-nav .tabs * {
@@ -152,6 +153,12 @@
     border-radius: 0.25rem;
   }
 /********************ESTILOS DE LA INPUT DE INGRESO*/
+.texto{
+    width: 100%;
+    box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+    border-radius: 20px;
+    padding: 10px;
+}
   .texto .inputGroup {
   font-family: 'Segoe UI', sans-serif;
   margin: 1em 0 1em 0;
@@ -258,4 +265,5 @@
     align-items: center;
     margin-bottom:15px ;
     color: gray;
+    cursor: pointer;
    }
