--- a/css/lock-screen.css
+++ b/css/lock-screen.css
@@ -37,10 +37,10 @@ body {
 }
 
 .lock-screen .code-input {
-    width: 40px;
-    height: 40px;
+    width: 70px;
+    height: 70px;
     margin: 0 5px;
-    font-size: 20px;
+    font-size: 25px;
     text-align: center;
     border: 2px solid #ccc;
     border-radius: 5px;
@@ -50,10 +50,11 @@ body {
     background-color: #1a4adb;
     color: white;
     border: none;
-    padding: 10px 20px;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
-    font-size: 16px;
+    font-size: 20px;
+    width: 100%;
 }
 
 .lock-screen button:hover {
